Added employee profile endpoint. DAT-2295
